# AquaSense

./: .gitignore  App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  styles.css  tailwind.config.ts  types.ts
backend/: main.py  pyproject.toml  requirements.txt
backend/data/: overview.json  report.json
backend/services/: auth_service.py  color_correction_service.py  gemini_service.py  oss_service.py  qwen_service.py  report_service.py  tongue_analysis_service.py  urine_analysis_service.py
components/: CircularProgress.tsx  HydrationLineChart.tsx  RadarChart.tsx
services/: geminiService.ts
views/: AuthView.tsx  HistoryView.tsx  OnboardingView.tsx  ProfileView.tsx  RecommendationsView.tsx  ReportView.tsx  SummaryView.tsx  TongueAnalysisView.tsx  UrineAnalysisView.tsx
